Added getTopRatedTMDB function
