# backend/api/openapi.yaml
@@ -237,6 +237,24 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /movies/getTopRatedTMDB:
+    get:
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: Succesful
+          content:
+            application/json:
+              schema:
+                type: string   
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 
   /movies/credits/{movieID}:
     get:
